--- a/app/src/main/res/layout/seventh_question.xml
+++ b/app/src/main/res/layout/seventh_question.xml
@@ -55,26 +55,17 @@
         android:layout_margin="10dp"
         android:layout_height="400dp">
 
-       <!-- <com.example.minimental.CustomView.MilkDragView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+           <com.example.minimental.CustomView.MilkDragView
+               android:id="@+id/milk_drag_view"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent" />
 
-            <ImageView
-                android:id="@+id/seventh_question_ImageView_milk"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/ic_blue_milk"
-                android:textColorHint="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.39"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.29" />
 
-        </com.example.minimental.CustomView.MilkDragView>-->
 
-        <ImageView
+
+
+
+        <!--<ImageView
             android:id="@+id/seventh_question_ImageView1"
             android:layout_width="150dp"
             android:layout_height="200dp"
@@ -126,7 +117,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.449" />
 
-        <!--<View
+        <View
             android:id="@+id/blank_square_view"
             android:layout_width="40dp"
             android:layout_height="40dp"
