--- a/app/src/main/res/layout/seventh_question.xml
+++ b/app/src/main/res/layout/seventh_question.xml
@@ -41,7 +41,7 @@
             android:layout_margin="25dp"
             android:drawableEnd="@drawable/ic_speaker"
             android:gravity="center"
-            android:text="listen"
+            android:text="@string/listen"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="15sp"
@@ -122,7 +122,6 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="144dp"
-            android:background="@drawable/blank_square"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.928"
             app:layout_constraintStart_toStartOf="parent"
