--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -13,7 +13,6 @@
         android:orientation="vertical">
 
 
-
         <TextView
             android:id="@+id/tenth_question_title"
             android:layout_width="match_parent"
@@ -35,6 +34,13 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="please copy the picture"
+                    android:textSize="30dp" />
 
                 <ImageView
                     android:id="@+id/tenth_question_ImageView"
