--- a/app/src/main/res/layout/spelling_version.xml
+++ b/app/src/main/res/layout/spelling_version.xml
@@ -43,7 +43,7 @@
                     android:layout_margin="40dp"
                     android:gravity="center"
                     android:text="@string/textView_spellig_version_word"
-                    android:textSize="40dp"
+                    android:textSize="40sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -83,16 +83,39 @@
                     android:id="@+id/spelling_version_textview2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="40dp"
+                    android:layout_margin="10dp"
                     android:gravity="center"
                     android:text="@string/textView_spellig_version_textView2"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:textStyle="bold" />
 
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
+
+                <Button
+                    android:id="@+id/Button_finish_answer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/round_border"
+                    android:gravity="center"
+                    android:hint="@string/Button_finish_answer_text"
+                    android:padding="10dp"
+                    android:textColorHint="@color/white"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
