--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -111,14 +111,20 @@
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp" />
 
-                <ImageButton
+                @+id/fourth_question_mic
+
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/fourth_question_mic"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
                     android:layout_margin="25dp"
-                    android:background="@null"
-                    android:src="@drawable/ic_microphone2"
-                    android:gravity="center" />
+                    android:drawableEnd="@drawable/ic_microphone"
+                    android:gravity="center"
+                    android:text="@string/speak"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
