--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -28,13 +28,27 @@
                 android:textSize="40sp"
                 android:textStyle="bold" />
 
-            <!--<TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="40sp"
-                android:text="result"
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/result_txt_math"/>-->
+                android:layout_margin="10dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/explain_math"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:visibility="visible"
+                    android:gravity="center"
+                    android:text="@string/explain_math_text_view"
+                    android:textColorHint="@color/white"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -98,17 +112,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:orientation="vertical"
+                android:gravity="center"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp">
 
-                <ImageButton
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="15dp"
-                    android:background="@null"
-                    android:src="@drawable/ic_microphone2"
-                    android:id="@+id/mic_image_btn"/>
+                <Button
+                    android:id="@+id/mic_image_btn"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="25dp"
+                    android:drawableEnd="@drawable/ic_microphone"
+                    android:gravity="center"
+                    android:text="@string/speak"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
 
                 <Button
                     android:id="@+id/Button_finish_answer"
