--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -162,11 +162,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:orientation="vertical"
                 android:paddingStart="16dp"
                 android:layout_marginTop="10dp"
                 android:paddingEnd="16dp">
+
+
                 <Button
                     android:id="@+id/next_Btn"
                     android:layout_width="match_parent"
@@ -182,8 +183,20 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
 
-
+            <ProgressBar
+                android:id="@+id/progressBar_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:visibility="gone"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
