--- a/app/src/main/res/layout/sixth_question.xml
+++ b/app/src/main/res/layout/sixth_question.xml
@@ -96,27 +96,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginTop="30dp"
                 android:baselineAligned="false"
                 android:gravity="center"
                 android:orientation="horizontal">
 
 
-                <ImageButton
+                <Button
                     android:id="@+id/image_of_microphone"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_margin="40dp"
-                    android:background="@null"
-                    android:src="@drawable/ic_microphone2"
-                    android:gravity="center" />
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="25dp"
+                    android:drawableEnd="@drawable/ic_microphone"
+                    android:gravity="center"
+                    android:text="@string/speak"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp">
