--- a/app/src/main/res/layout/add_row_files.xml
+++ b/app/src/main/res/layout/add_row_files.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <androidx.cardview.widget.CardView
+        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_weight="1"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
@@ -20,10 +13,31 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp">
 
+                <ImageView
+                    android:id="@+id/photo_imageView"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="10dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_centerHorizontal="true" />
+
+                <Button
+                    android:id="@+id/take_photo_btn"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableEnd="@drawable/ic_camera_svgrepo_com"
+                    android:gravity="center"
+                    android:text="@string/take_photo"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
-
-    </RelativeLayout>
-
-</RelativeLayout>
 
