--- a/app/src/main/res/layout/add_row_files.xml
+++ b/app/src/main/res/layout/add_row_files.xml
@@ -15,11 +15,14 @@
 
                 <ImageView
                     android:id="@+id/photo_imageView"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="10dp"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp" />
 
                 <Button
                     android:id="@+id/take_photo_btn"
