--- a/app/src/main/res/layout/information_fragment.xml
+++ b/app/src/main/res/layout/information_fragment.xml
@@ -1,3 +1,4 @@
+<!--suppress ALL -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -42,6 +43,17 @@
 
 
 
+                <ImageButton
+                    android:id="@+id/day_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/day_quetion"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -83,6 +95,17 @@
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
 
+                <ImageButton
+                    android:id="@+id/month_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/month_quetion"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -94,6 +117,8 @@
                     android:gravity="center"
                     android:hint="@string/enter_currentMonth"
                     android:textSize="20sp">
+
+
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_monthET"
@@ -122,6 +147,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/date_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/date_quetion"
@@ -161,6 +197,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/year_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/year_quetion"
@@ -202,6 +249,17 @@
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
 
+                <ImageButton
+                    android:id="@+id/season_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/season_quetion"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -241,6 +299,17 @@ w
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/country_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/country_quetion"
@@ -282,6 +351,17 @@ w
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
 
+                <ImageButton
+                    android:id="@+id/city_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/city_quetion"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -321,6 +401,17 @@ w
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/street_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/street_quetion"
@@ -362,6 +453,17 @@ w
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
 
+                <ImageButton
+                    android:id="@+id/floor_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/floor_quetion"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -401,6 +503,17 @@ w
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/area_speaker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_speaker"
+                    />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/area_quetion"
