--- a/app/src/main/res/layout/second_question.xml
+++ b/app/src/main/res/layout/second_question.xml
@@ -57,7 +57,7 @@
 
 
                 <Button
-                    android:id="@+id/listen_btn_speaker"
+                    android:id="@+id/memory_instruction_speaker"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
                     android:layout_margin="25dp"
