--- a/app/src/main/res/layout/sixth_question.xml
+++ b/app/src/main/res/layout/sixth_question.xml
@@ -57,7 +57,7 @@
 
 
                 <ImageButton
-                    android:id="@+id/image_of_speaker"
+                    android:id="@+id/repeat_sentence_speaker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
