--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -20,6 +20,17 @@
         android:textColorHint="@color/white"
         android:textSize="40sp" />
 
+    <ImageButton
+        android:id="@+id/eight_question_speaker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:background="@null"
+        android:padding="10dp"
+        android:src="@drawable/ic_speaker"
+        />
+
     <TextView
         android:layout_width="365dp"
         android:layout_height="97dp"
