--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -30,6 +30,17 @@
                 android:textColorHint="@color/white"
                 android:textSize="40sp"
                 android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/ninth_question_speaker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@null"
+                android:padding="10dp"
+                android:src="@drawable/ic_speaker"
+                />
         </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
