--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -24,6 +24,17 @@
             android:textColor="@color/black"
             android:textSize="35sp" />
 
+        <ImageButton
+            android:id="@+id/tenth_question_speaker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@null"
+            android:padding="10dp"
+            android:src="@drawable/ic_speaker"
+            />
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
