--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -20,30 +20,36 @@
         android:textColorHint="@color/white"
         android:textSize="40sp" />
 
-    <ImageButton
-        android:id="@+id/eight_question_speaker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:background="@null"
-        android:padding="10dp"
-        android:src="@drawable/ic_speaker"
-        />
 
-    <TextView
-        android:layout_width="365dp"
-        android:layout_height="97dp"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:text="@string/eighth_question_instructions"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/viewblackcircle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.444" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:orientation="horizontal">
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/eight_question_speaker"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:background="@null"-->
+<!--            android:padding="10dp"-->
+<!--            android:src="@drawable/ic_speaker" />-->
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/eighth_question_instructions"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/viewblackcircle" />
+
+
+    </LinearLayout>
+
+
 
     <!--<LinearLayout
         android:id="@+id/dragLinearout"
