Add animation and UI for speaker button

--- a/app/src/main/res/layout/collect_missingdetails.xml
+++ b/app/src/main/res/layout/collect_missingdetails.xml
@@ -129,20 +129,20 @@
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    app:helperText="click on the row for choices"
                     android:gravity="center"
                     android:hint="@string/enter_currentArea"
-                    android:textSize="20sp">
+                    android:textSize="20sp"
+                    app:helperText="click on the row for choices">
 
 
-                        <AutoCompleteTextView
-                            android:id="@+id/input_areamissingET"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:enabled="false"
-                            android:inputType="none"
-                            android:paddingStart="16dp"
-                            android:paddingEnd="16dp" />
+                    <AutoCompleteTextView
+                        android:id="@+id/input_areamissingET"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:inputType="none"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
