--- a/app/src/main/res/layout/fifth_question.xml
+++ b/app/src/main/res/layout/fifth_question.xml
@@ -34,6 +34,27 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/describe_instructions_speaker"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_margin="25dp"
+                android:drawableEnd="@drawable/ic_speaker"
+                android:gravity="center"
+                android:text="@string/listen"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,16 +63,7 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/describe_instructions_speaker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@null"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_speaker"
-                    />
+
 
                 <TextView
                     android:id="@+id/fifth_question_question_textview"
