--- a/app/src/main/res/layout/sixth_question.xml
+++ b/app/src/main/res/layout/sixth_question.xml
@@ -56,18 +56,17 @@
                 android:orientation="horizontal">
 
 
-                <ImageButton
+                <Button
                     android:id="@+id/repeat_sentence_speaker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="25dp"
+                    android:drawableEnd="@drawable/ic_speaker"
                     android:gravity="center"
-                    android:minHeight="48dp"
-                    android:background="@null"
-                    android:src="@drawable/ic_speaker"
+                    android:text="@string/listen"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
