--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -38,20 +38,22 @@
                     android:id="@+id/tenth_question_speaker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_centerVertical="false"
                     android:layout_gravity="center"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="0dp"
                     android:background="@null"
                     android:padding="10dp"
                     android:src="@drawable/ic_speaker" />
 
                 <TextView
+                    android:id="@+id/tenth_question_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerHorizontal="false"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginTop="5dp"
                     android:text="please copy the picture"
                     android:textSize="25sp" />
 
