added string and picture

--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -44,6 +44,7 @@
             android:gravity="center"
             android:text="@string/eighth_question_instructions"
             android:textSize="25sp"
+            android:id="@+id/eighthQuestion_instructions"
             app:layout_constraintBottom_toTopOf="@+id/viewblackcircle" />
 
 
