--- a/app/src/main/res/layout/choose_third_question.xml
+++ b/app/src/main/res/layout/choose_third_question.xml
@@ -29,9 +29,9 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/choose_third_question_title"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
-                    android:textSize="40sp"
-                    android:textStyle="bold" />
+                    android:textSize="40sp" />
 
             </LinearLayout>
 
