--- a/app/src/main/res/layout/collect_missingdetails.xml
+++ b/app/src/main/res/layout/collect_missingdetails.xml
@@ -27,9 +27,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
                     android:gravity="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:text="@string/missingdetails"
-                    android:textSize="40sp"
-                    android:textStyle="bold" />
+                    android:textSize="40sp" />
 
             </LinearLayout>
 
