--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -17,6 +17,7 @@
         android:text="@string/eighth_question_title"
         android:textAllCaps="true"
         android:textColor="@color/black"
+        android:textStyle="bold"
         android:textColorHint="@color/white"
         android:textSize="40sp" />
 
