--- a/app/src/main/res/layout/files_fragment.xml
+++ b/app/src/main/res/layout/files_fragment.xml
@@ -23,10 +23,10 @@
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:text="@string/title_question_fileFragment_textView"
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:textSize="40sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
