--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -24,9 +24,9 @@
                 android:gravity="center"
                 android:text="@string/title_question_title_name4"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textColorHint="@color/black"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:textSize="40sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,7 +43,6 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/fourth_question_textview_name"
-                    android:textColor="@color/black"
                     android:textColorHint="@color/white"
                     android:textSize="30sp"
                     android:textStyle="bold" />
@@ -87,7 +86,6 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/second_question_textview2_name"
-                    android:textColor="@color/black"
                     android:textColorHint="@color/white"
                     android:textSize="25sp"
                     android:textStyle="bold" />
@@ -130,7 +128,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:text="Feedback Here"
+                    android:text="@string/feedback_here"
                     android:id="@+id/feedback_text"/>
             </LinearLayout>
 
