--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -24,9 +24,9 @@
                 android:gravity="center"
                 android:text="@string/math_version_name"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textColorHint="@color/white"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:textSize="40sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -94,29 +94,16 @@
                 android:orientation="horizontal">
 
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/input_name"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:hint="@string/answer_math_voice"
-                    android:textSize="20sp"
-                    app:counterEnabled="true">
-
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/input_nameET"
+                    <TextView
+                        android:id="@+id/math_version_textview2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:maxLength="21"
-                        android:maxLines="1"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"/>
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:layout_margin="10dp"
+                        android:gravity="center"
+                        android:text="@string/click_on_the_microphone_for_answer"
+                        android:textColorHint="@color/black"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
 
             </LinearLayout>
 
