--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -27,9 +27,9 @@
                 android:gravity="center"
                 android:text="@string/ninth_question"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textColorHint="@color/white"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:textSize="40sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
