--- a/app/src/main/res/layout/seventh_question.xml
+++ b/app/src/main/res/layout/seventh_question.xml
@@ -20,6 +20,7 @@
             android:layout_margin="20dp"
             android:gravity="center"
             android:text="@string/seventh_question_title_string"
+            android:textStyle="bold"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="35sp"/>
