--- a/app/src/main/res/layout/sixth_question.xml
+++ b/app/src/main/res/layout/sixth_question.xml
@@ -24,9 +24,9 @@
                 android:gravity="center"
                 android:text="@string/title_question_title_name6"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textColorHint="@color/black"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:textSize="40sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -85,7 +85,6 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/six_question_textview2_name"
-                    android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="30sp"
                     android:textStyle="bold" />
